deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-backend
  labels:
    app: todo-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-back
  template:
    metadata:
      labels:
        app: todo-back
    spec:
      containers:
      - name: toumash-todo-back
        image: toumash/todoapp-back
