deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front
  labels:
    app: todo-front
spec:
  replicas: 5
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front
    spec:
      containers:
      - name: todo-front
        image: toumash/todoapp-front
