deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-mysql
  labels:
    app: todo-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-mysql
  template:
    metadata:
      labels:
        app: todo-mysql
    spec:
      containers:
      - name: todo-mysql
        image: mariadb
